(fix): remove z-index from boost buttons

--- a/app/src/controllers/boosts/boosts.scss
+++ b/app/src/controllers/boosts/boosts.scss
@@ -243,8 +243,11 @@ svg.m-facebook-icon{
       display: block;
       width: 100%;
       text-align: center;
-      z-index: 999;
       position: relative;
+
+      m-modal-boost {
+        z-index: 999;
+      }
     }
   }
 }
